...
    <string name="register_email_length_invalid">Please make sure you have entered correct email</string>
    <string name="register_username_length_invalid">Please make sure you have entered correct username</string>
    <string name="please_make_sure_you_have_entered_correct_email">Please make sure you have entered the correct email</string>


    <!--    Introduction-->
    <string name="what_is_your_gender">What is your gender?</string>
    <string name="what_is_your_age">What is your age?</string>
    <string name="what_is_your_current_weight">What is your current weight?</string>
    <string name="what_is_your_desired_weight">What would you like to do with your weight?</string>
    <string name="what_is_your_height">What is your height?</string>
    <string name="what_type_of_work_do_you_have">What type of work do you have?</string>
    <string name="how_often_do_you_train_in_a_week">How often do you train in a week</string>
    <string name="how_would_you_describe_your_activity_level_during_a_day">How would you describe your activity level during a day?</string>
...
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="filter">Filter recipes</string>
    <string name="product_name">Product name</string>
    <string name="nutrition_values">Nutrition values</string>
    <string name="incorrect_weight_was_entered">Incorrect weight was entered</string>
    <string name="in_container">In Container</string>
    <string name="in_average">In Average</string>
    <string name="in_100g">In 100 g</string>
    <string name="in_100ml">In 100 ml</string>
    <string name="container_weight">Container weight</string>
    <string name="average_weight">Average weight</string>
...
    <string name="recipe_difficulty_out_of_5">%s / 5</string>

    <string name="new_recipe_public">Should recipe be public</string>
    <string name="new_recipe_public_des">Everybody will be able to see it and you will not be able to delete it</string>
    <string name="new_recipe_save">Save recipe</string>

    <string name="next">NEXT</string>
    <string name="finish">FINISH</string>
    <string name="back">BACK</string>
    <string name="let_us_know_something_about_you">Let Us Know Something About You!</string>


    <string name="g">g</string>
    <string name="bar_code">Bar code</string>

    <string name="edit">edit</string>
    <string name="log_out">Log out</string>
    <string name="account_ask_for_weight_daily">Ask for weight daily</string>
    <string name="create_product">Create Product</string>
    <string name="add_product">Add product</string>
    <string name="you_have_logged_for">You have logged for</string>
    <string name="cancel">Cancel</string>

    <string name="username">Username</string>
    <string name="macro_elements">Macro elements</string>
...
    <string name="CALENDAR_FORWARD">CALENDAR FORWARD</string>
    <string name="EMAIL">EMAIL</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="CONFIRM">CONFIRM</string>
    <string name="USERNAME">USERNAME</string>
    <string name="BUTTON">BUTTON</string>
    <string name="SEARCH_TEXT_FIELD">SEARCH TEXT FIELD</string>
    <string name="WEIGHT_TEXT_FIELD">WEIGHT TEXT FIELD</string>
    <string name="SEARCH_BUTTON">SEARCH BUTTON</string>
    <string name="WEIGHT_BUTTON">WEIGHT BUTTON</string>
    <string name="scanner">SCANNER</string>
</resources>
